update auth service
